# HW_5_WEB

./: pyproject.toml
chat/: server.py
console_exchange/: main.py
